--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0"
   },
