--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
 MYSQL_USER=root
+API_PORT=3001
 MYSQL_PASSWORD=Mindwalker(69)
 MYSQL_DATABASE=dr
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST=localhost
 JWT_SECRET=contratado
